--- a/app/src/main/res/drawable/bg_round_gray.xml
+++ b/app/src/main/res/drawable/bg_round_gray.xml
@@ -3,4 +3,7 @@
     android:shape="rectangle">
     <solid android:color="?colorPrimary"/>
     <corners android:radius="10dp" />
+    <stroke
+        android:width="2dp"
+        android:color="#B6B5B5" />
 </shape>
