--- a/app/src/main/res/layout/fragment_actions.xml
+++ b/app/src/main/res/layout/fragment_actions.xml
@@ -37,6 +37,8 @@
         </LinearLayout>
 
         <ListView
+            android:divider="@null"
+            android:dividerHeight="0dp"
             android:id="@+id/listOfActions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
