--- a/app/src/main/res/layout/fragment_city_game_place.xml
+++ b/app/src/main/res/layout/fragment_city_game_place.xml
@@ -55,6 +55,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/miejsce"
+                    android:textColor="@color/white"
                     android:textSize="40sp"
                     android:textStyle="bold"
                     android:layout_gravity="center"/>
@@ -63,6 +64,7 @@
                     android:id="@+id/placeNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/white"
                     android:text="1"
                     android:textSize="40sp"
                     android:textStyle="bold"
