--- a/app/src/main/res/layout/provide_label_layout.xml
+++ b/app/src/main/res/layout/provide_label_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="?colorSecondaryVariant">
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:textSize="30sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:text="@string/label"/>
     </LinearLayout>
 
@@ -33,7 +33,7 @@
             android:hint="@string/provide_label"
             android:backgroundTint="@android:color/transparent"
             android:id="@+id/provideLabel"
-            android:textColorHint="@color/gray"
+            android:textColorHint="@color/black"
             android:inputType="textPersonName"
             android:textColor="@color/black"
             android:textSize="16sp" />
@@ -46,7 +46,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:text="@string/use_the_default_value" />
 
     <LinearLayout
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cancel"
-            android:background="@drawable/bg_round_btn_back"
+            android:background="@drawable/bg_round_gray"
             android:layout_weight="1"/>
 
         <TextView
@@ -78,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ok"
-            android:background="@drawable/bg_round_btn_back"
+            android:background="@drawable/bg_round_gray"
             android:layout_weight="1"/>
 
     </LinearLayout>
