--- a/app/src/main/res/layout/fragment_actions.xml
+++ b/app/src/main/res/layout/fragment_actions.xml
@@ -37,14 +37,14 @@
         </LinearLayout>
 
         <ListView
-            android:divider="@null"
-            android:dividerHeight="0dp"
             android:id="@+id/listOfActions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:listitem="@layout/action_item"
+            android:divider="@null"
+            android:dividerHeight="0dp"
             android:orientation="vertical"
-            android:padding="4dp"/>
+            android:padding="4dp"
+            tools:listitem="@layout/action_item" />
 
     </LinearLayout>
 
